etapa5/y.output
   0  $accept : program $end

   1  program : decl

   2  decl : dec decl
   3       |

   4  dec : vardec
   5      | fundec

   6  vardec : TK_IDENTIFIER ':' vartype '=' lit ';'
   7         | TK_IDENTIFIER ':' vartype '[' lit ']' litlist

   8  lit : LIT_INTEGER
   9      | LIT_REAL
  10      | LIT_CHAR

  11  litlist : lit litlist
  12          | ';'

  13  fundec : '(' vartype ')' TK_IDENTIFIER '(' argsdef ')' cmd

  14  args : exp largs
  15       |

  16  largs : ',' exp largs
  17        |

  18  argsdef : TK_IDENTIFIER ':' vartype ',' argsdef
  19          | TK_IDENTIFIER ':' vartype argsdef
  20          |

  21  vartype : KW_BYTE
  22          | KW_SHORT
  23          | KW_LONG
  24          | KW_FLOAT
  25          | KW_DOUBLE

  26  block : '(' lcmd ')'

  27  cmd : atrib
  28      | KW_PRINT printargs
  29      | KW_READ '>' TK_IDENTIFIER
  30      | KW_WHILE '(' exp ')' cmd
  31      | KW_IF '(' exp ')' KW_THEN cmd KW_ELSE cmd
  32      | KW_IF '(' exp ')' KW_THEN cmd
  33      | KW_RETURN exp
  34      | block
  35      |

  36  printargs : argprint tailprint

  37  tailprint : ',' argprint tailprint
  38            |

  39  argprint : exp
  40           | LIT_STRING

  41  atrib : TK_IDENTIFIER '=' exp
  42        | TK_IDENTIFIER '[' exp ']' '=' exp

  43  exp : '(' exp ')'
  44      | TK_IDENTIFIER
  45      | TK_IDENTIFIER '[' exp ']'
  46      | TK_IDENTIFIER '(' args ')'
  47      | LIT_INTEGER
  48      | LIT_STRING
  49      | LIT_CHAR
  50      | LIT_REAL
  51      | exp OPERATOR_LE exp
  52      | exp OPERATOR_GE exp
  53      | exp OPERATOR_EQ exp
  54      | exp OPERATOR_NE exp
  55      | exp OPERATOR_AND exp
  56      | exp OPERATOR_OR exp
  57      | exp '*' exp
  58      | exp '/' exp
  59      | exp '+' exp
  60      | exp '-' exp
  61      | exp '>' exp
  62      | exp '<' exp
  63      | exp '!' exp

  64  block : '{' lcmd '}'

  65  lcmd : cmd ';' lcmd
  66       | cmd

state 0
	$accept : . program $end  (0)
	decl : .  (3)

	TK_IDENTIFIER  shift 1
	'('  shift 2
	$end  reduce 3

	program  goto 3
	decl  goto 4
	dec  goto 5
	vardec  goto 6
	fundec  goto 7


state 1
	vardec : TK_IDENTIFIER . ':' vartype '=' lit ';'  (6)
	vardec : TK_IDENTIFIER . ':' vartype '[' lit ']' litlist  (7)

	':'  shift 8
	.  error


state 2
	fundec : '(' . vartype ')' TK_IDENTIFIER '(' argsdef ')' cmd  (13)

	KW_BYTE  shift 9
	KW_SHORT  shift 10
	KW_LONG  shift 11
	KW_FLOAT  shift 12
	KW_DOUBLE  shift 13
	.  error

	vartype  goto 14


state 3
	$accept : program . $end  (0)

	$end  accept


state 4
	program : decl .  (1)

	.  reduce 1


state 5
	decl : dec . decl  (2)
	decl : .  (3)

	TK_IDENTIFIER  shift 1
	'('  shift 2
	$end  reduce 3

	decl  goto 15
	dec  goto 5
	vardec  goto 6
	fundec  goto 7


state 6
	dec : vardec .  (4)

	.  reduce 4


state 7
	dec : fundec .  (5)

	.  reduce 5


state 8
	vardec : TK_IDENTIFIER ':' . vartype '=' lit ';'  (6)
	vardec : TK_IDENTIFIER ':' . vartype '[' lit ']' litlist  (7)

	KW_BYTE  shift 9
	KW_SHORT  shift 10
	KW_LONG  shift 11
	KW_FLOAT  shift 12
	KW_DOUBLE  shift 13
	.  error

	vartype  goto 16


state 9
	vartype : KW_BYTE .  (21)

	.  reduce 21


state 10
	vartype : KW_SHORT .  (22)

	.  reduce 22


state 11
	vartype : KW_LONG .  (23)

	.  reduce 23


state 12
	vartype : KW_FLOAT .  (24)

	.  reduce 24


state 13
	vartype : KW_DOUBLE .  (25)

	.  reduce 25


state 14
	fundec : '(' vartype . ')' TK_IDENTIFIER '(' argsdef ')' cmd  (13)

	')'  shift 17
	.  error


state 15
	decl : dec decl .  (2)

	.  reduce 2


state 16
	vardec : TK_IDENTIFIER ':' vartype . '=' lit ';'  (6)
	vardec : TK_IDENTIFIER ':' vartype . '[' lit ']' litlist  (7)

	'='  shift 18
	'['  shift 19
	.  error


state 17
	fundec : '(' vartype ')' . TK_IDENTIFIER '(' argsdef ')' cmd  (13)

	TK_IDENTIFIER  shift 20
	.  error


state 18
	vardec : TK_IDENTIFIER ':' vartype '=' . lit ';'  (6)

	LIT_INTEGER  shift 21
	LIT_REAL  shift 22
	LIT_CHAR  shift 23
	.  error

	lit  goto 24


state 19
	vardec : TK_IDENTIFIER ':' vartype '[' . lit ']' litlist  (7)

	LIT_INTEGER  shift 21
	LIT_REAL  shift 22
	LIT_CHAR  shift 23
	.  error

	lit  goto 25


state 20
	fundec : '(' vartype ')' TK_IDENTIFIER . '(' argsdef ')' cmd  (13)

	'('  shift 26
	.  error


state 21
	lit : LIT_INTEGER .  (8)

	.  reduce 8


state 22
	lit : LIT_REAL .  (9)

	.  reduce 9


state 23
	lit : LIT_CHAR .  (10)

	.  reduce 10


state 24
	vardec : TK_IDENTIFIER ':' vartype '=' lit . ';'  (6)

	';'  shift 27
	.  error


state 25
	vardec : TK_IDENTIFIER ':' vartype '[' lit . ']' litlist  (7)

	']'  shift 28
	.  error


state 26
	fundec : '(' vartype ')' TK_IDENTIFIER '(' . argsdef ')' cmd  (13)
	argsdef : .  (20)

	TK_IDENTIFIER  shift 29
	')'  reduce 20

	argsdef  goto 30


state 27
	vardec : TK_IDENTIFIER ':' vartype '=' lit ';' .  (6)

	.  reduce 6


state 28
	vardec : TK_IDENTIFIER ':' vartype '[' lit ']' . litlist  (7)

	LIT_INTEGER  shift 21
	LIT_REAL  shift 22
	LIT_CHAR  shift 23
	';'  shift 31
	.  error

	lit  goto 32
	litlist  goto 33


state 29
	argsdef : TK_IDENTIFIER . ':' vartype ',' argsdef  (18)
	argsdef : TK_IDENTIFIER . ':' vartype argsdef  (19)

	':'  shift 34
	.  error


state 30
	fundec : '(' vartype ')' TK_IDENTIFIER '(' argsdef . ')' cmd  (13)

	')'  shift 35
	.  error


state 31
	litlist : ';' .  (12)

	.  reduce 12


state 32
	litlist : lit . litlist  (11)

	LIT_INTEGER  shift 21
	LIT_REAL  shift 22
	LIT_CHAR  shift 23
	';'  shift 31
	.  error

	lit  goto 32
	litlist  goto 36


state 33
	vardec : TK_IDENTIFIER ':' vartype '[' lit ']' litlist .  (7)

	.  reduce 7


state 34
	argsdef : TK_IDENTIFIER ':' . vartype ',' argsdef  (18)
	argsdef : TK_IDENTIFIER ':' . vartype argsdef  (19)

	KW_BYTE  shift 9
	KW_SHORT  shift 10
	KW_LONG  shift 11
	KW_FLOAT  shift 12
	KW_DOUBLE  shift 13
	.  error

	vartype  goto 37


35: shift/reduce conflict (shift 43, reduce 35) on TK_IDENTIFIER
35: shift/reduce conflict (shift 44, reduce 35) on '('
state 35
	fundec : '(' vartype ')' TK_IDENTIFIER '(' argsdef ')' . cmd  (13)
	cmd : .  (35)

	KW_IF  shift 38
	KW_WHILE  shift 39
	KW_READ  shift 40
	KW_RETURN  shift 41
	KW_PRINT  shift 42
	TK_IDENTIFIER  shift 43
	'('  shift 44
	'{'  shift 45
	$end  reduce 35

	cmd  goto 46
	block  goto 47
	atrib  goto 48


state 36
	litlist : lit litlist .  (11)

	.  reduce 11


state 37
	argsdef : TK_IDENTIFIER ':' vartype . ',' argsdef  (18)
	argsdef : TK_IDENTIFIER ':' vartype . argsdef  (19)
	argsdef : .  (20)

	TK_IDENTIFIER  shift 29
	','  shift 49
	')'  reduce 20

	argsdef  goto 50


state 38
	cmd : KW_IF . '(' exp ')' KW_THEN cmd KW_ELSE cmd  (31)
	cmd : KW_IF . '(' exp ')' KW_THEN cmd  (32)

	'('  shift 51
	.  error


state 39
	cmd : KW_WHILE . '(' exp ')' cmd  (30)

	'('  shift 52
	.  error


state 40
	cmd : KW_READ . '>' TK_IDENTIFIER  (29)

	'>'  shift 53
	.  error


state 41
	cmd : KW_RETURN . exp  (33)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 60


state 42
	cmd : KW_PRINT . printargs  (28)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 61
	'('  shift 59
	.  error

	exp  goto 62
	printargs  goto 63
	argprint  goto 64


state 43
	atrib : TK_IDENTIFIER . '=' exp  (41)
	atrib : TK_IDENTIFIER . '[' exp ']' '=' exp  (42)

	'='  shift 65
	'['  shift 66
	.  error


state 44
	block : '(' . lcmd ')'  (26)
	cmd : .  (35)

	KW_IF  shift 38
	KW_WHILE  shift 39
	KW_READ  shift 40
	KW_RETURN  shift 41
	KW_PRINT  shift 42
	TK_IDENTIFIER  shift 43
	'('  shift 44
	'{'  shift 45
	';'  reduce 35
	')'  reduce 35

	lcmd  goto 67
	cmd  goto 68
	block  goto 47
	atrib  goto 48


state 45
	block : '{' . lcmd '}'  (64)
	cmd : .  (35)

	KW_IF  shift 38
	KW_WHILE  shift 39
	KW_READ  shift 40
	KW_RETURN  shift 41
	KW_PRINT  shift 42
	TK_IDENTIFIER  shift 43
	'('  shift 44
	'{'  shift 45
	';'  reduce 35
	'}'  reduce 35

	lcmd  goto 69
	cmd  goto 68
	block  goto 47
	atrib  goto 48


state 46
	fundec : '(' vartype ')' TK_IDENTIFIER '(' argsdef ')' cmd .  (13)

	.  reduce 13


state 47
	cmd : block .  (34)

	.  reduce 34


state 48
	cmd : atrib .  (27)

	.  reduce 27


state 49
	argsdef : TK_IDENTIFIER ':' vartype ',' . argsdef  (18)
	argsdef : .  (20)

	TK_IDENTIFIER  shift 29
	')'  reduce 20

	argsdef  goto 70


state 50
	argsdef : TK_IDENTIFIER ':' vartype argsdef .  (19)

	.  reduce 19


state 51
	cmd : KW_IF '(' . exp ')' KW_THEN cmd KW_ELSE cmd  (31)
	cmd : KW_IF '(' . exp ')' KW_THEN cmd  (32)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 71


state 52
	cmd : KW_WHILE '(' . exp ')' cmd  (30)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 72


state 53
	cmd : KW_READ '>' . TK_IDENTIFIER  (29)

	TK_IDENTIFIER  shift 73
	.  error


54: shift/reduce conflict (shift 75, reduce 44) on '('
state 54
	exp : TK_IDENTIFIER .  (44)
	exp : TK_IDENTIFIER . '[' exp ']'  (45)
	exp : TK_IDENTIFIER . '(' args ')'  (46)

	'['  shift 74
	'('  shift 75
	$end  reduce 44
	KW_ELSE  reduce 44
	OPERATOR_LE  reduce 44
	OPERATOR_GE  reduce 44
	OPERATOR_EQ  reduce 44
	OPERATOR_NE  reduce 44
	OPERATOR_AND  reduce 44
	OPERATOR_OR  reduce 44
	TK_IDENTIFIER  reduce 44
	'!'  reduce 44
	'<'  reduce 44
	'>'  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	';'  reduce 44
	']'  reduce 44
	')'  reduce 44
	','  reduce 44
	'}'  reduce 44


state 55
	exp : LIT_INTEGER .  (47)

	.  reduce 47


state 56
	exp : LIT_REAL .  (50)

	.  reduce 50


state 57
	exp : LIT_CHAR .  (49)

	.  reduce 49


state 58
	exp : LIT_STRING .  (48)

	.  reduce 48


state 59
	exp : '(' . exp ')'  (43)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 76


state 60
	cmd : KW_RETURN exp .  (33)
	exp : exp . OPERATOR_LE exp  (51)
	exp : exp . OPERATOR_GE exp  (52)
	exp : exp . OPERATOR_EQ exp  (53)
	exp : exp . OPERATOR_NE exp  (54)
	exp : exp . OPERATOR_AND exp  (55)
	exp : exp . OPERATOR_OR exp  (56)
	exp : exp . '*' exp  (57)
	exp : exp . '/' exp  (58)
	exp : exp . '+' exp  (59)
	exp : exp . '-' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . '!' exp  (63)

	OPERATOR_LE  shift 77
	OPERATOR_GE  shift 78
	OPERATOR_EQ  shift 79
	OPERATOR_NE  shift 80
	OPERATOR_AND  shift 81
	OPERATOR_OR  shift 82
	'!'  shift 83
	'<'  shift 84
	'>'  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	$end  reduce 33
	KW_ELSE  reduce 33
	TK_IDENTIFIER  reduce 33
	';'  reduce 33
	'('  reduce 33
	')'  reduce 33
	'}'  reduce 33


61: reduce/reduce conflict (reduce 40, reduce 48) on $end
61: reduce/reduce conflict (reduce 40, reduce 48) on KW_ELSE
61: reduce/reduce conflict (reduce 40, reduce 48) on TK_IDENTIFIER
61: reduce/reduce conflict (reduce 40, reduce 48) on ';'
61: reduce/reduce conflict (reduce 40, reduce 48) on '('
61: reduce/reduce conflict (reduce 40, reduce 48) on ')'
61: reduce/reduce conflict (reduce 40, reduce 48) on ','
61: reduce/reduce conflict (reduce 40, reduce 48) on '}'
state 61
	argprint : LIT_STRING .  (40)
	exp : LIT_STRING .  (48)

	$end  reduce 40
	KW_ELSE  reduce 40
	OPERATOR_LE  reduce 48
	OPERATOR_GE  reduce 48
	OPERATOR_EQ  reduce 48
	OPERATOR_NE  reduce 48
	OPERATOR_AND  reduce 48
	OPERATOR_OR  reduce 48
	TK_IDENTIFIER  reduce 40
	'!'  reduce 48
	'<'  reduce 48
	'>'  reduce 48
	'+'  reduce 48
	'-'  reduce 48
	'*'  reduce 48
	'/'  reduce 48
	';'  reduce 40
	'('  reduce 40
	')'  reduce 40
	','  reduce 40
	'}'  reduce 40


state 62
	argprint : exp .  (39)
	exp : exp . OPERATOR_LE exp  (51)
	exp : exp . OPERATOR_GE exp  (52)
	exp : exp . OPERATOR_EQ exp  (53)
	exp : exp . OPERATOR_NE exp  (54)
	exp : exp . OPERATOR_AND exp  (55)
	exp : exp . OPERATOR_OR exp  (56)
	exp : exp . '*' exp  (57)
	exp : exp . '/' exp  (58)
	exp : exp . '+' exp  (59)
	exp : exp . '-' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . '!' exp  (63)

	OPERATOR_LE  shift 77
	OPERATOR_GE  shift 78
	OPERATOR_EQ  shift 79
	OPERATOR_NE  shift 80
	OPERATOR_AND  shift 81
	OPERATOR_OR  shift 82
	'!'  shift 83
	'<'  shift 84
	'>'  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	$end  reduce 39
	KW_ELSE  reduce 39
	TK_IDENTIFIER  reduce 39
	';'  reduce 39
	'('  reduce 39
	')'  reduce 39
	','  reduce 39
	'}'  reduce 39


state 63
	cmd : KW_PRINT printargs .  (28)

	.  reduce 28


state 64
	printargs : argprint . tailprint  (36)
	tailprint : .  (38)

	','  shift 90
	$end  reduce 38
	KW_ELSE  reduce 38
	TK_IDENTIFIER  reduce 38
	';'  reduce 38
	'('  reduce 38
	')'  reduce 38
	'}'  reduce 38

	tailprint  goto 91


state 65
	atrib : TK_IDENTIFIER '=' . exp  (41)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 92


state 66
	atrib : TK_IDENTIFIER '[' . exp ']' '=' exp  (42)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 93


state 67
	block : '(' lcmd . ')'  (26)

	')'  shift 94
	.  error


state 68
	lcmd : cmd . ';' lcmd  (65)
	lcmd : cmd .  (66)

	';'  shift 95
	')'  reduce 66
	'}'  reduce 66


state 69
	block : '{' lcmd . '}'  (64)

	'}'  shift 96
	.  error


state 70
	argsdef : TK_IDENTIFIER ':' vartype ',' argsdef .  (18)

	.  reduce 18


state 71
	cmd : KW_IF '(' exp . ')' KW_THEN cmd KW_ELSE cmd  (31)
	cmd : KW_IF '(' exp . ')' KW_THEN cmd  (32)
	exp : exp . OPERATOR_LE exp  (51)
	exp : exp . OPERATOR_GE exp  (52)
	exp : exp . OPERATOR_EQ exp  (53)
	exp : exp . OPERATOR_NE exp  (54)
	exp : exp . OPERATOR_AND exp  (55)
	exp : exp . OPERATOR_OR exp  (56)
	exp : exp . '*' exp  (57)
	exp : exp . '/' exp  (58)
	exp : exp . '+' exp  (59)
	exp : exp . '-' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . '!' exp  (63)

	OPERATOR_LE  shift 77
	OPERATOR_GE  shift 78
	OPERATOR_EQ  shift 79
	OPERATOR_NE  shift 80
	OPERATOR_AND  shift 81
	OPERATOR_OR  shift 82
	'!'  shift 83
	'<'  shift 84
	'>'  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	')'  shift 97
	.  error


state 72
	cmd : KW_WHILE '(' exp . ')' cmd  (30)
	exp : exp . OPERATOR_LE exp  (51)
	exp : exp . OPERATOR_GE exp  (52)
	exp : exp . OPERATOR_EQ exp  (53)
	exp : exp . OPERATOR_NE exp  (54)
	exp : exp . OPERATOR_AND exp  (55)
	exp : exp . OPERATOR_OR exp  (56)
	exp : exp . '*' exp  (57)
	exp : exp . '/' exp  (58)
	exp : exp . '+' exp  (59)
	exp : exp . '-' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . '!' exp  (63)

	OPERATOR_LE  shift 77
	OPERATOR_GE  shift 78
	OPERATOR_EQ  shift 79
	OPERATOR_NE  shift 80
	OPERATOR_AND  shift 81
	OPERATOR_OR  shift 82
	'!'  shift 83
	'<'  shift 84
	'>'  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	')'  shift 98
	.  error


state 73
	cmd : KW_READ '>' TK_IDENTIFIER .  (29)

	.  reduce 29


state 74
	exp : TK_IDENTIFIER '[' . exp ']'  (45)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 99


state 75
	exp : TK_IDENTIFIER '(' . args ')'  (46)
	args : .  (15)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	')'  reduce 15

	exp  goto 100
	args  goto 101


state 76
	exp : '(' exp . ')'  (43)
	exp : exp . OPERATOR_LE exp  (51)
	exp : exp . OPERATOR_GE exp  (52)
	exp : exp . OPERATOR_EQ exp  (53)
	exp : exp . OPERATOR_NE exp  (54)
	exp : exp . OPERATOR_AND exp  (55)
	exp : exp . OPERATOR_OR exp  (56)
	exp : exp . '*' exp  (57)
	exp : exp . '/' exp  (58)
	exp : exp . '+' exp  (59)
	exp : exp . '-' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . '!' exp  (63)

	OPERATOR_LE  shift 77
	OPERATOR_GE  shift 78
	OPERATOR_EQ  shift 79
	OPERATOR_NE  shift 80
	OPERATOR_AND  shift 81
	OPERATOR_OR  shift 82
	'!'  shift 83
	'<'  shift 84
	'>'  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	')'  shift 102
	.  error


state 77
	exp : exp OPERATOR_LE . exp  (51)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 103


state 78
	exp : exp OPERATOR_GE . exp  (52)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 104


state 79
	exp : exp OPERATOR_EQ . exp  (53)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 105


state 80
	exp : exp OPERATOR_NE . exp  (54)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 106


state 81
	exp : exp OPERATOR_AND . exp  (55)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 107


state 82
	exp : exp OPERATOR_OR . exp  (56)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_REAL  shift 56
	LIT_CHAR  shift 57
	LIT_STRING  shift 58
	'('  shift 59
	.  error

	exp  goto 108

